--- a/ecommerce/style.css
+++ b/ecommerce/style.css
@@ -129,7 +129,7 @@ body {
   width: 100%;
   height: 100vh;
   background-size: cover;
-  background-position: top -80% right 0;
+  background-position: top -30% right 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -216,6 +216,10 @@ body {
 
 /* feature section styles */
 
+.product-section {
+  padding:40px;
+}
+
 .product-section .pro-collection {
   display: flex;
   flex-wrap: wrap;
@@ -228,7 +232,7 @@ body {
 }
 .product-section .product-cart {
   width: 280px;
-  border: 1px solid #ebebeb;
+  border: 0px solid #ebebeb;
   padding: 13px;
   margin-bottom: 30px;
   border-radius: 25px;
@@ -241,7 +245,7 @@ body {
 }
 .product-section .product-cart img {
   width: 100%;
-  border-radius: 25px;
+  border-radius: 25px;.main_image
 }
 .product-section .product-cart span {
   color: #969696;
@@ -456,3 +460,19 @@ span {
   border-radius: 7px;
 }
 
+.card{border: none;overflow: hidden}
+
+.main_image{display: flex;justify-content: center;align-items: center;border: 1px solid #eee;height: 400px;width: 100%;overflow: hidden}
+.heart{height: 29px;width: 29px;background-color: #f93737;border-radius: 50%;display: flex;justify-content: center;align-items: center}
+.content p{font-size: 12px}
+.ratings span{font-size: 14px;margin-left: 12px}
+.colors{margin-top: 5px}
+.colors ul{list-style: none;display: flex;padding-left: 0px}
+.colors ul li{height: 20px;width: 20px;display: flex;border-radius: 50%;margin-right: 10px;cursor: pointer}
+.colors ul li:nth-child(1){background-color: #6c704d}
+.colors ul li:nth-child(2){background-color: #96918b}
+.colors ul li:nth-child(3){background-color: #68778e}
+.colors ul li:nth-child(4){background-color: #263f55}
+.colors ul li:nth-child(5){background-color: black}
+.right-side{position: relative}
+.buttons .btn{height: 50px;width: 150px;border-radius: 0px !important}
